--- a/wp-content/plugins/elementor/assets/lib/eicons/css/elementor-icons.css
+++ b/wp-content/plugins/elementor/assets/lib/eicons/css/elementor-icons.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "eicons";
-  src: url("/l-l-charter//wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.eot?5_29_0");
-  src: url("/l-l-charter//wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.eot?5_29_0#iefix") format("embedded-opentype"), url("/l-l-charter//wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.woff2?5_29_0") format("woff2"), url("/l-l-charter//wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.woff?5_29_0") format("woff"), url("/l-l-charter//wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.ttf?5_29_0") format("truetype"), url("/l-l-charter//wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.svg?5_29_0#eicon") format("svg");
+  src: url("https://fill-x.github.io/l-l-charter/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.eot?5_29_0");
+  src: url("https://fill-x.github.io/l-l-charter/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.eot?5_29_0#iefix") format("embedded-opentype"), url("https://fill-x.github.io/l-l-charter/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.woff2?5_29_0") format("woff2"), url("https://fill-x.github.io/l-l-charter/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.woff?5_29_0") format("woff"), url("https://fill-x.github.io/l-l-charter/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.ttf?5_29_0") format("truetype"), url("https://fill-x.github.io/l-l-charter/wp-content/plugins/elementor/assets/lib/eicons/fonts/eicons.svg?5_29_0#eicon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
